--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Eat for less with Tummy Express!</h2>
-                <p>Join our mailing list and prior to launch we will reach out with details on how you can get started.</p>
-                <a href="#signup"  id="signButton" class="btn btn-main">Sign Me Up!</a>
+                <h2>$500 Cash GiveAway</h2>
+                <p>Register prior to our launch in the Fall of 2024!<br>
+                  &bull; Simply by registering before our official launch<br> you will be entered into our draw for a chance to win <br>ONE of FIVE $100 cash prizes.
+                </p>
+                
+                <a href="#signup"  id="signButton" class="btn btn-main">Register Now!</a>
                 <div id="hiddenForm" style="display: none;">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4V4kjIpZL42rob8Psh4Dw18aSQoLszIviD4304mDSBEY4XQ/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
