--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="col-md-12 text-center">
                 <h2>$500 Cash GiveAway</h2>
                 <p>Register prior to our launch in the Fall of 2024!<br>
-                  &bull; Simply by registering before our official launch<br> you will be entered into our draw for a chance to win <br>ONE of FIVE $100 cash prizes.
+                  &bull; Simply by registering before our official launch<br> you will be entered into our draw for a chance to <br>win ONE of FIVE $100 cash prizes.
                 </p>
                 
                 <a href="#signup"  id="signButton" class="btn btn-main">Register Now!</a>
