--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="col-md-4 p-0">
           <div class="service-item text-center">
               <span class="count">1.</span>
-              <h4>Sign Up</h4>
+              <h4>Register</h4>
               <p>Create your free account and personalize your preferences to start receiving tailored deals and offers.</p>
           </div>
         </div>
