--- a/index.html
+++ b/index.html
@@ -103,19 +103,27 @@
     </div>    <!-- End container -->
   </section> 
 
-  <section class="call-to-action section-sm">
+  <section class="call-to-action section-sm py-5">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h2>$500 Cash GiveAway</h2>
-                <p>Register prior to our launch in the Fall of 2024!<br>
-                  &bull; Simply by registering before our official launch<br> you will be entered into our draw for a chance to <br>win ONE of FIVE $100 cash prizes.<hr>
-                  <strong>Own a Restaurant and interested in advertising?</strong> You can leave your details below and we will send you more details.
-                </p>
-                
-                <a href="#signup"  id="signButton" class="btn btn-main">Register Now!</a>
-                <div id="hiddenForm" style="display: none;">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4V4kjIpZL42rob8Psh4Dw18aSQoLszIviD4304mDSBEY4XQ/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card text-center shadow-lg border-0">
+                    <div class="card-body">
+                        <h2 class="card-title mb-4">$500 Cash Giveaway</h2>
+                        <p class="card-text">
+                            Register prior to our launch in the Fall of 2024!<br>
+                            <ul class="list-unstyled">
+                                <li>&bull; Simply by registering before our official launch, you will be entered into our draw for a chance to win ONE of FIVE $100 cash prizes.</li>
+                            </ul>
+                            <hr>
+                            <strong>Own a Restaurant and interested in advertising?</strong><br>
+                            Leave your details below, and we will send you more information.
+                        </p>
+                        <a href="#signup" id="signButton" class="btn btn-main btn-lg my-3">Register Now!</a>
+                        <div id="hiddenForm" class="mt-4" style="display: none;">
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4V4kjIpZL42rob8Psh4Dw18aSQoLszIviD4304mDSBEY4XQ/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div> <!-- End row -->
