--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
     </div>    <!-- End container -->
   </section> 
 
-  <section class="call-to-action section-sm py-5">
+  <section class="call-to-action section-sm py-5" style="background-color: #fff;">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="card text-center shadow-lg border-0">
-                    <div class="card-body">
-                        <h2 class="card-title mb-4">$500 Cash Giveaway</h2>
+                <div class="card text-center shadow-lg border-0" style="background-color: #f9f9f9;">
+                    <div class="card-body" style="color: #3194dc;">
+                        <h2 class="card-title mb-4" style="color: #3194dc;">$500 Cash Giveaway</h2>
                         <p class="card-text">
                             Register prior to our launch in the Fall of 2024!<br>
                             <ul class="list-unstyled">
@@ -119,7 +119,7 @@
                             <strong>Own a Restaurant and interested in advertising?</strong><br>
                             Leave your details below, and we will send you more information.
                         </p>
-                        <a href="#signup" id="signButton" class="btn btn-main btn-lg my-3">Register Now!</a>
+                        <a href="#signup" id="signButton" class="btn btn-main btn-lg my-3" style="background-color: #3194dc; color: #fff;">Register Now!</a>
                         <div id="hiddenForm" class="mt-4" style="display: none;">
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4V4kjIpZL42rob8Psh4Dw18aSQoLszIviD4304mDSBEY4XQ/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                         </div>
