--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>    <!-- End container -->
   </section> 
 
-  <section class="call-to-action section-sm py-5" style="background-color: #fff;">
+  <section class="call-to-action section-sm py-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
