add second form for restaurants

--- a/index.html
+++ b/index.html
@@ -114,15 +114,20 @@
                             Register prior to our launch in the Fall of 2024!<br>
                             <ul class="list-unstyled">
                                 <li>&bull; Simply by registering before our official launch, you will be entered into our draw for a chance to win ONE of FIVE $100 cash prizes.</li>
-                            </ul>
+                            </ul><br>
+                            <a href="#signup" id="signButton" class="btn btn-main btn-lg my-3" style="background-color: #3194dc; color: #fff;">Register Now!</a>
+                            <div id="hiddenForm" class="mt-4" style="display: none;">
+                              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4V4kjIpZL42rob8Psh4Dw18aSQoLszIviD4304mDSBEY4XQ/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                          </div>
                             <hr>
                             <strong>Own a Restaurant and interested in advertising?</strong><br>
                             Leave your details below, and we will send you more information.
                         </p>
-                        <a href="#signup" id="signButton" class="btn btn-main btn-lg my-3" style="background-color: #3194dc; color: #fff;">Register Now!</a>
-                        <div id="hiddenForm" class="mt-4" style="display: none;">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4V4kjIpZL42rob8Psh4Dw18aSQoLszIviD4304mDSBEY4XQ/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                        </div>
+                        <a href="#signup" id="signRestButton" class="btn btn-main btn-lg my-3" style="background-color: #3194dc; color: #fff;">Get More Info</a>
+                        
+                        <div id="hiddenRestForm" class="mt-4" style="display: none;">
+                          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3QLYfQnjJSfpxKxLuRnyU00SFrAt3DKy96Yy5XJs6uW25EA/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                      </div>
                     </div>
                 </div>
             </div>
