--- a/index.html
+++ b/index.html
@@ -121,13 +121,14 @@
                           </div>
                             <hr>
                             <strong>Own a Restaurant and interested in advertising?</strong><br>
-                            Leave your details below, and we will send you more information.
-                        </p>
-                        <a href="#restsignup" id="signRestButton" class="btn btn-main btn-lg my-3" style="background-color: #3194dc; color: #fff;">Get More Info</a>
+                            Leave your details below, and we will send you more information.<br>
+                            <a href="#restsignup" id="signRestButton" class="btn btn-main btn-lg my-3" style="background-color: #3194dc; color: #fff;">Get More Info</a>
                         
                         <div id="hiddenRestForm" class="mt-4" style="display: none;">
                           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe3QLYfQnjJSfpxKxLuRnyU00SFrAt3DKy96Yy5XJs6uW25EA/viewform?embedded=true" width="100%" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                       </div>
+                        </p>
+                        
                     </div>
                 </div>
             </div>
